1.9.1
- Czech translation (thanks contributors!)
- Portuguese (Brazil) translation
- Chinese (China) translation
- Italian translation
- App now trusts Android user certificates (thanks murizorun!)
- Fixed purchase workflow in missing batch items view
- Fixed crash after rotation in product edit view
- Updated translations

1.9.0
- Polish translation (thanks Marcin!)
- Initial Scanner device support (needs TAB as suffix)
- Initial Tor Hidden Services support through Orbot
- Fixed consume batch mode with specific entry
- Fixed shopping list preselection with shortcut
- Fixed amount color of missing items in stock
- Fixed wrong filtering of missing items
- Plural strings for better translation support
- Updated translations

1.8.7
- Hebrew translation (thanks Yaron!)
- Bug fixes and improvements

1.8.6
- This was just a new tag for F-Droid

1.8.5
- Fixed Norwegian translation
- Updated translations

1.8.4:
- Norwegian translation (thanks Tor!)
- Spanish translation (thanks Martín!)

1.8.3:
- Hotfix for batch mode

1.8.2:
- Moved in-app help to project page on Github
- Updated translations
- Bug fixes and improvements

1.8.1:
- Many small design improvements
- Improved download termination
- Fix crash in shopping mode
- Bug fixes and improvements

1.8.0:
- Dutch translation (thanks Maarten!)
- Consume & purchase partial amount
- Consume all in batch mode (option)
- Offline indicator in shopping list
- Fixed expiring items filter in stock overview
- Fixed animation of product overview bottom sheet
- Fixed height of bottom sheets in landscape mode
- Updated translations
- Bug fixes and improvements

1.7.0:
- Swedish translation (thanks contributors!)
- Front camera setting (e.g. for tablets)
- Improved feedback
- Removed shopping list shortcut due to shortcut limit in most launchers
- Bug fixes and improvements

1.6.0:
- Purchase all items in shopping list
- Fixed sync bug in shopping list
- Updated translations
- Bug fixes and improvements

1.5.0: