@@ -62,6 +62,7 @@ import org.json.JSONObject;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Locale;
 
 import xyz.zedler.patrick.grocy.R;
 import xyz.zedler.patrick.grocy.activity.MainActivity;
@@ -1041,10 +1042,19 @@ public class MasterProductSimpleFragment extends Fragment {
                             Arrays.asList(createProductObj.getBarcodes().split(",")).get(0)
                     ),
                     response -> {
+                        String language = Locale.getDefault().getLanguage();
+                        String country = Locale.getDefault().getCountry();
+                        String both = language + "_" + country;
                         try {
                             JSONObject jsonObject = new JSONObject(response);
                             JSONObject product = jsonObject.getJSONObject("product");
-                            String name = product.getString("product_name");
+                            String name = product.optString("product_name_" + both);
+                            if(name.isEmpty()) {
+                                name = product.optString("product_name_" + language);
+                            }
+                            if(name.isEmpty()) {
+                                name = product.optString("product_name");
+                            }
                             editTextName.setText(name);
                             if(debug) Log.i(
                                     TAG,
