@@ -55,7 +55,6 @@ import org.json.JSONObject;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Locale;
 
 import xyz.zedler.patrick.grocy.R;
 import xyz.zedler.patrick.grocy.activity.MainActivity;
@@ -167,8 +166,6 @@ public class StockFragment extends Fragment implements StockItemAdapter.StockIte
 
         clickUtil = new ClickUtil();
         animUtil = new AnimUtil();
-
-        Log.i(TAG, "onViewCreated: " + Locale.getDefault());
 
         // PREFERENCES
 
